Bug 1120851 - Set candidate window position for prediction even if no composition. r=masayuki